--- a/RetiDiCalcolatoriM.kilepr.dist
+++ b/RetiDiCalcolatoriM.kilepr.dist
@@ -4,7 +4,7 @@ img_extIsRegExp=false
 img_extensions=.eps .jpg .jpeg .png .pdf .ps .fig .gif
 kileprversion=2
 kileversion=2.1.0
-lastDocument=Sections/Computazione.tex
+lastDocument=Chapters/Computazione.tex
 masterDocument=
 name=Project
 pkg_extIsRegExp=false
@@ -26,7 +26,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/COM.tex]
+[document-settings,item:Chapters/COM.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -36,7 +36,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/CORBA.tex]
+[document-settings,item:Chapters/CORBA.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -46,7 +46,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/Computazione.tex]
+[document-settings,item:Chapters/Computazione.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -56,7 +56,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/Comunicazione.tex]
+[document-settings,item:Chapters/Comunicazione.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -66,7 +66,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/Middleware.tex]
+[document-settings,item:Chapters/Middleware.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -76,7 +76,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/Mobile.tex]
+[document-settings,item:Chapters/Mobile.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -86,7 +86,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/QoS.tex]
+[document-settings,item:Chapters/QoS.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -96,7 +96,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/Replicazione.tex]
+[document-settings,item:Chapters/Replicazione.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -106,7 +106,7 @@ Indentation Mode=normal
 Mode=LaTeX
 ReadWrite=true
 
-[document-settings,item:Sections/WS.tex]
+[document-settings,item:Chapters/WS.tex]
 Bookmarks=
 Encoding=UTF-8
 FoldedColumns=
@@ -126,7 +126,7 @@ mode=LaTeX
 open=true
 order=0
 
-[item:Sections/COM.tex]
+[item:Chapters/COM.tex]
 archive=true
 column=6
 encoding=UTF-8
@@ -136,7 +136,7 @@ mode=LaTeX
 open=true
 order=2
 
-[item:Sections/CORBA.tex]
+[item:Chapters/CORBA.tex]
 archive=true
 column=14
 encoding=UTF-8
@@ -146,7 +146,7 @@ mode=LaTeX
 open=true
 order=4
 
-[item:Sections/Computazione.tex]
+[item:Chapters/Computazione.tex]
 archive=true
 column=0
 encoding=UTF-8
@@ -156,7 +156,7 @@ mode=LaTeX
 open=true
 order=1
 
-[item:Sections/Comunicazione.tex]
+[item:Chapters/Comunicazione.tex]
 archive=true
 column=72
 encoding=UTF-8
@@ -166,7 +166,7 @@ mode=LaTeX
 open=true
 order=3
 
-[item:Sections/Middleware.tex]
+[item:Chapters/Middleware.tex]
 archive=true
 column=2
 encoding=UTF-8
@@ -176,7 +176,7 @@ mode=LaTeX
 open=true
 order=5
 
-[item:Sections/Mobile.tex]
+[item:Chapters/Mobile.tex]
 archive=true
 column=31
 encoding=UTF-8
@@ -186,7 +186,7 @@ mode=LaTeX
 open=true
 order=6
 
-[item:Sections/QoS.tex]
+[item:Chapters/QoS.tex]
 archive=true
 column=0
 encoding=UTF-8
@@ -196,7 +196,7 @@ mode=LaTeX
 open=true
 order=7
 
-[item:Sections/Replicazione.tex]
+[item:Chapters/Replicazione.tex]
 archive=true
 column=0
 encoding=UTF-8
@@ -206,7 +206,7 @@ mode=LaTeX
 open=true
 order=8
 
-[item:Sections/WS.tex]
+[item:Chapters/WS.tex]
 archive=true
 column=0
 encoding=UTF-8
@@ -222,55 +222,55 @@ CursorLine=43
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/COM.tex]
+[view-settings,view=0,item:Chapters/COM.tex]
 CursorColumn=6
 CursorLine=453
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/CORBA.tex]
+[view-settings,view=0,item:Chapters/CORBA.tex]
 CursorColumn=14
 CursorLine=583
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/Computazione.tex]
+[view-settings,view=0,item:Chapters/Computazione.tex]
 CursorColumn=0
 CursorLine=0
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/Comunicazione.tex]
+[view-settings,view=0,item:Chapters/Comunicazione.tex]
 CursorColumn=72
 CursorLine=744
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/Middleware.tex]
+[view-settings,view=0,item:Chapters/Middleware.tex]
 CursorColumn=2
 CursorLine=627
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/Mobile.tex]
+[view-settings,view=0,item:Chapters/Mobile.tex]
 CursorColumn=31
 CursorLine=415
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/QoS.tex]
+[view-settings,view=0,item:Chapters/QoS.tex]
 CursorColumn=0
 CursorLine=705
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/Replicazione.tex]
+[view-settings,view=0,item:Chapters/Replicazione.tex]
 CursorColumn=0
 CursorLine=551
 JumpList=
 ViMarks=
 
-[view-settings,view=0,item:Sections/WS.tex]
+[view-settings,view=0,item:Chapters/WS.tex]
 CursorColumn=0
 CursorLine=217
 JumpList=
